# MakeItTalk

./: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  cartoon_vis.py  gypsum_history.sh  local_show_cam.py  mac_local.py  main_end2end.py  main_end2end_cartoon.py  main_fl_extract_image_translation.py  main_train_content.py  main_train_image_translation.py  main_train_noautovc.py  main_train_speaker_aware.py  quick_demo.ipynb  quick_demo_tdlr.ipynb  realhuman_postprocessing.py  requirements.txt
approaches/: train_audio2landmark.py  train_content.py  train_image_translation.py  train_noautovc.py  train_speaker_aware.py
examples_cartoon/: bluehead_delauney_tri.txt  bluehead_face_close_mouth.txt  bluehead_face_open_mouth.txt  bluehead_face_open_mouth_norm.txt  bluehead_scale_shift.txt  cartoonM_delauney_tri.txt  cartoonM_face_close_mouth.txt  cartoonM_face_open_mouth - Copy.txt  cartoonM_face_open_mouth.txt  cartoonM_face_open_mouth_norm.txt  cartoonM_scale_shift.txt  color_delauney_tri.txt  color_face_close_mouth.txt  color_face_open_mouth.txt  color_face_open_mouth_norm.txt  cuphead_delauney_tri - Copy.txt  cuphead_delauney_tri.txt  cuphead_face_close_mouth.txt  cuphead_face_open_mouth.txt  cuphead_face_open_mouth_norm.txt  cuphead_scale_shift.txt  danbooru1_delauney_tri.txt  danbooru1_face_close_mouth.txt  danbooru1_face_open_mouth copy.txt  danbooru1_face_open_mouth.txt  danbooru1_face_open_mouth_norm.txt  danbooru1_scale_shift.txt  dog_face_close_mouth.txt  dog_face_open_mouth.txt  dog_face_open_mouth_norm.txt  (+67 more)
facewarp/facewarp/src/: CMakeLists.txt  facewarp.cpp
(+51 files in other folders)
